--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@craco/craco": "^5.4.0",
     "@material-ui/core": "^4.4.0",
+    "@material-ui/icons": "^4.2.1",
     "axios": "^0.19.0",
     "formik": "^1.5.8",
     "formik-material-ui": "^0.0.22",
@@ -11,20 +13,18 @@
     "prop-types": "latest",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-facebook-login": "^4.1.1",
     "react-images-upload": "^1.2.7",
+    "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
+    "redux": "^4.0.4",
     "typeface-roboto": "^0.0.75",
-    "yup": "^0.27.0",
-
-    "@craco/craco": "^5.4.0",
-    "@material-ui/icons": "^4.2.1",
-    "react-redux": "^7.1.1",
-    "redux": "^4.0.4"
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "CLIENT_ENV=development craco start",
-    "dev": "CLIENT_ENV=localhost craco start",
+    "dev": "CLIENT_ENV=localhost HTTPS=true craco start",
     "prod": "CLIENT_ENV=production craco start",
     "build": "CLIENT_ENV=production craco build",
     "build-dev": "CLIENT_ENV=development craco build"
@@ -44,7 +44,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-
-  }
+  "devDependencies": {}
 }
